<resources>
    <string name="app_name">Digital Bank App</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="sign_in">Sign In</string>
    <string name="welcome_to_digital_bank">Welcome To Digital Bank!</string>
    <string name="welcome_to_home_page">Welcome to Home Page!</string>
    <string name="hello">Hello, </string>
    <string name="sign_in_form_error">Please fill in the required information!</string>
    <string name="invalid_passsword">Your password is not correct!</string>
    <string name="invalid_credentials">Your email or your password are not correct!</string>
    <string name="new_loan_request">New Loan Request</string>
    <string name="credit_type">Credit Type</string>
    <string name="total_amount">Total Amount($)</string>
    <string name="credit_period_number_of_months">Credit Period(number of months)</string>
    <string name="interest_rate">Interest Rate(%)</string>
    <string name="next">Next</string>
    <string name="iban">IBAN</string>
    <string name="number_of_kids">Number of Kids</string>
    <string name="family_situation">Family Situation</string>
    <string name="occupation">Occupation</string>
    <string name="date_of_employment">Date Of Employment</string>
    <string name="monthly_net_income">Monthly Net Income($)</string>
    <string name="send_loan_request">Send Loan Request</string>
    <string name="cancel">Cancel</string>
    <string name="go_home">Go Home</string>
    <string name="your_loan_request_was_sent_and_its_current_status_is">Your loan request was sent and its current status is </string>
    <string name="need_help">Need help deciding?</string>
    <string name="loan_quiz">Loan Quiz</string>
    <string name="your_active_loans">Your active loans</string>
    <string name="pending_loans_arrange_meeting_with_agent_for_approval">Pending loans...Arrange meeting with agent for approval!</string>
    <string name="id_loan">Id Loan: </string>
    <string name="amount_due">Amount Due: </string>
    <string name="due_by">Due By: </string>
    <string name="interest_due">Interest Due: </string>
    <string name="appointment_scheduled">Your meeting was scheduled successfully! View all current appointments in My appointments section. </string>
    <string-array name="creditPeriod">
        <item>12</item>
        <item>24</item>
        <item>36</item>
        <item>48</item>
        <item>64</item>
    </string-array>
    <string name="active_loan_due_by_template">%1$d/%2$d</string>
    <string name="lv_row_item_default_value">-</string>
    <string name="period">Period:</string>
    <string name="dialog_pending_title">Set Agent Appointment</string>
    <string name="dialog_pending_message">To finalise this loan request, you have to set up a meeting with an agent. Continue?</string>
    <string name="dialog_yes_label">Yes</string>
    <string name="dialog_no_label">No</string>
    <string name="dialog_quiz_title">Take Our Loan Quiz To Help You Decide!</string>
    <string name="dialog_quiz_message">We have created a unique quiz with a couple of questions to make us understand some more
    things about you. At the end of the quiz we will tell you what we think may be the best approach to take one of our credit loans. Continue?</string>
    <string name="dialog_quiz_yes">Yes, could use the help!</string>
    <string name="dialog_quiz_no">No, will take the quiz later.</string>
    <string name="fill_in_the_details_for_your_meeting_with_our_agent">Fill in the details for your meeting with our agent!</string>
    <string name="set_meeting">Set Meeting</string>
    <string name="select_a_convenient_date_for_your_appointment">Select a convenient date for your appointment:</string>
    <string name="select_a_time_for_your_meeting">Select a time for your meeting:</string>
    <string name="time">Time</string>
    <string name="choose_a_location">Choose a location:</string>
    <string name="choose_an_agent">Choose an agent:</string>
    <string name="loan_requests_history">Loan Requests History</string>
    <string name="appointment_history">Appointment History</string>
    <string name="predictions">View Predictions</string>
    <string name="log_out">Log Out</string>
    <string name="appointment_id">Appointment Id: </string>
    <string name="day">Day:</string>
    <string name="month">Month:</string>
    <string name="year">Year:</string>
    <string name="timeAppointment">Time:</string>
    <string name="location">Location:</string>
    <string name="do_you_like_to_travel_overseas_for_at_least_3_times_a_year">Do you like to travel overseas for at least 3 times a year?</string>
    <string name="yes_love_to_create_new_experiences">Yes, love to create new experiences!</string>
    <string name="no_i_don_t_really_like_to_spend_my_money_on_that_many_vacations">No, I don\'t really like to spend my money on that many vacations.</string>
    <string name="do_you_enjoy_spending_money_on_material_items_sometimes_even_luxury_goods">Do you enjoy spending money on material items, sometimes even luxury goods?</string>
    <string name="yes_i_like_to_indulge_and_have_fun">Yes, I like to indulge and have fun!</string>
    <string name="no_i_usually_save_up_for_investing_money">No, I usually save up for investing money.</string>
    <string name="are_you_a_student_right_now_and_in_need_of_some_money_until_you_graduate">Are you a student right now and in need of some money until you graduate?</string>
    <string name="yes_i_do_not_have_the_time_to_work_but_can_t_keep_on_asking_for_money_from_my_parents">Yes, I can\'t keep on asking for money from my parents.</string>
    <string name="no_i_am_not">No, I am not.</string>
    <string name="let_s_talk_about_your_financial_situation_are_you_able_to_save_up_at_least_20_of_your_income_each_month">Let\'s talk about your financial situation. Are you able to save up at least 20% of your income each month?</string>
    <string name="yes_sometimes_even_more_although_it_is_pretty_hard">Yes, I always try to, although it is pretty hard.</string>
    <string name="not_really_the_economic_situation_right_now_and_my_income_do_not_allow_me_to">Not really, the economic situation right now and my income do not allow me to.</string>
    <string name="is_the_amount_of_money_you_are_looking_for_over_50_000">Is the amount of money you are looking for over 50.000$?</string>
    <string name="yes_it_is">Yes, it is.</string>
    <string name="no_i_need_less">No, I need less.</string>
    <string name="lastly_do_you_plan_on_using_this_money_on_multiple_things_or_do_you_have_just_one_big_investment_in_mind">Lastly, do you plan on using this money on multiple things or do you have just one big investment in mind?</string>
    <string name="i_have_a_couple_of_things_in_mind_that_i_would_like_to_buy">I have a couple of things in mind that I would like to buy.</string>
    <string name="i_have_just_one_big_investment_in_mind_for_now">I have just one big investment in mind for now.</string>
    <string name="tell_me_my_results">Tell me my results!</string>
    <string name="here_are_your_test_results_based_on_the_answears_provided_for_a_more_detailed_analysis_please_contact_us_for_a_visit_with_one_of_our_agents">Here are your test results based on the answears provided! For a more detailed analysis, please contact us for a visit with one of our agents. Given your answers, we think the best credit solution for you is </string>
    <string name="return_home">Return home</string>
    <string name="this_credit_solution_would_work_best_for_you_given_its_maximum_value_its_interest_rate_and_your_current_financial_situation_of_course_you_can_still_choose_any_other_credit_that_you_think_would_suit_you_best_make_the_choice_once_you_are_ready_we_are_always_here_to_help_though">This credit solution would work best for you given its maximum value, its interest rate and your current financial situation! Of course, you can still choose any other credit that you think would suit you best! Make the choice once you are ready! We are always here to help though!</string>
    <string name="select_a_credit_type">Select a credit type:</string>
    <string name="select_the_desired_amount">Select the desired amount:</string>
    <string name="select_the_credit_period_in_months">Select the credit period in months:</string>
    <string name="calculate">Calculate</string>
    <string name="your_monthly_rate_will_be">Your monthly rate will be:</string>
    <string name="this_value_was_calculated_for_an_interest_rate_of_value">This value was calculated for an interest rate of value</string>
    <string name="credit_loan_monthly_rate_calculator">Credit Loan Monthly Rate Calculator</string>
    <string name="record_id">Record Id:</string>
    <string name="record_date">Record Date:</string>
    <string name="amount_paid">Amount Paid:</string>
    <string name="your_monthly_rate_is">Your monthly rate is</string>
    <string name="your_amount_due_left_is">Your amount due left is</string>
    <string name="exchange_rate">Exchange Rate</string>
    <string name="inflation_rate">Inflation Rate</string>
    <string name="interest_rate2">Interest Rate</string>
    <string name="back">Back</string>
    <string name="this_is_the_current_prediction_for_romania_s_inflation_rate">This is the current prediction for Romania\'s inflation rate.</string>
    <string name="if_you_would_like_more_details_please_access_the_source">If you would like more details, please access the source https://www.bnr.ro/NBR-Projections-4353-Mobile.aspx</string>
    <string name="this_is_the_current_prediction_for_romania_s_exchange_rate">This is the current prediction for Romania\'s exchange rate.</string>
    <string name="if_you_would_need_more_details_please_access_the_source_https_www_romaniajournal_ro_business_financial_ron_currency_prediction_for_2023">If you would need more details, please access the source https://www.romaniajournal.ro/business/financial/ron-currency-prediction-for-2023/</string>
    <string name="this_is_the_current_prediction_for_eu_s_centralized_interest_rate">This is the current prediction for EU\'s centralized interest rate.</string>
    <string name="for_any_more_details_you_need_please_access_the_source_https_www_ecb_europa_eu_pub_projections_html_ecb_projections202109_ecbstaff_1f59a501e2_en_html">For any more details you need, please access the source https://www.ecb.europa.eu/pub/projections/html/ecb.projections202109_ecbstaff~1f59a501e2.en.html</string>
    <string name="please_send_quiz_results_via_email_as_well">Please send quiz results via email as well!</string>
    <string name="profile">Profile</string>
    <string name="this_is_your_current_registered_email_address_tap_to_change_it">This is your current registered email address. Tap to change it.</string>
    <string name="change_email">Change email</string>
    <string name="change_password">Change password</string>
    <string name="tap_this_button_to_start_the_change_of_password_process">Input your current password, then please choose a new one and type it in both fields.</string>
    <string name="loan_amount">Loan Amount:</string>
    <string name="current_password">Current Password</string>
    <string name="new_password">New Password</string>
    <string name="confirm_new_password">Confirm New Password</string>
    <string name="email_sent_for_new_email_address">Your email address has been updated!</string>
    <string name="password_updated">Your password has been successfully updated!</string>
    <string name="password_incorrect_not_match">Your password is not correct!</string>
    <string name="not_match">Your passwords are different!</string>
    <string name="student_loan_max_amount">The maximum amount allowed for Student Loan is 50000$!</string>
    <string name="travel_loan_max_amount">The maximum amount allowed for Travel Loan is 35000!</string>
</resources>