<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/id_img_meeting"
        android:layout_width="90dp"
        android:layout_height="50dp"
        app:srcCompat="@drawable/meeting"
        tools:layout_editor_absoluteX="130dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/id_tv_appReqId"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/id_tv_appReqId"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/appointment_id"
        tools:layout_editor_absoluteX="155dp"
        tools:layout_editor_absoluteY="145dp"
        app:layout_constraintStart_toEndOf="@id/id_img_meeting"
        app:layout_constraintEnd_toStartOf="@id/id_tv_dayApp"
        app:layout_constraintTop_toTopOf="parent"
        />

    <TextView
        android:id="@+id/id_tv_dayApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/day"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="290dp"
        app:layout_constraintStart_toEndOf="@id/id_tv_appReqId"
        app:layout_constraintEnd_toStartOf="@id/id_tv_monthApp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id_tv_monthApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/month"
        tools:layout_editor_absoluteX="173dp"
        tools:layout_editor_absoluteY="438dp"
        app:layout_constraintStart_toEndOf="@id/id_tv_dayApp"
        app:layout_constraintEnd_toStartOf="@id/id_tv_yearApp"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/id_tv_yearApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/year"
        tools:layout_editor_absoluteX="225dp"
        tools:layout_editor_absoluteY="561dp"
        app:layout_constraintStart_toEndOf="@id/id_tv_monthApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>


    <TextView
        android:id="@+id/id_tv_timeApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/timeAppointment"
        tools:layout_editor_absoluteX="197dp"
        tools:layout_editor_absoluteY="259dp"
        app:layout_constraintStart_toEndOf="@id/id_img_meeting"
        app:layout_constraintEnd_toStartOf="@id/id_tv_locationApp"
        app:layout_constraintTop_toBottomOf="@id/id_tv_dayApp"/>

    <TextView
        android:id="@+id/id_tv_locationApp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/location"
        tools:layout_editor_absoluteX="99dp"
        tools:layout_editor_absoluteY="579dp"
        app:layout_constraintStart_toEndOf="@id/id_tv_timeApp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_tv_yearApp"/>


</androidx.constraintlayout.widget.ConstraintLayout>