<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PredictionsActivity">

    <Button
        android:id="@+id/id_btn_exchangeRate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/exchange_rate"
        tools:layout_editor_absoluteX="235dp"
        tools:layout_editor_absoluteY="378dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="100dp"/>

    <Button
        android:id="@+id/id_btn_inflationRate"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/inflation_rate"
        tools:layout_editor_absoluteX="186dp"
        tools:layout_editor_absoluteY="193dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_btn_exchangeRate"
        android:layout_marginTop="128dp"/>

    <Button
        android:id="@+id/id_btn_interestRatePrediction"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/interest_rate2"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="453dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_btn_inflationRate"
        android:layout_marginTop="128dp"/>

    <Button
        android:id="@+id/id_btn_predictionBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/back"
        tools:layout_editor_absoluteX="101dp"
        tools:layout_editor_absoluteY="558dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>