<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <TextView
        android:id="@+id/id_tv_profile_email"
        android:layout_width="350dp"
        android:layout_height="wrap_content"
        android:text="@string/this_is_your_current_registered_email_address_tap_to_change_it"
        tools:layout_editor_absoluteX="196dp"
        tools:layout_editor_absoluteY="109dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="32dp"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/black"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_til_profile_email"
        android:layout_marginTop="32dp"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="164dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_tv_profile_email">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_tiet_profile_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/id_btn_profile_changeEmail"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/change_email"
        tools:layout_editor_absoluteX="123dp"
        tools:layout_editor_absoluteY="276dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_profile_email"/>


    <TextView
        android:id="@+id/id_tv_profile_password"
        android:layout_width="350dp"
        android:layout_marginTop="32dp"
        android:layout_height="wrap_content"
        android:text="@string/tap_this_button_to_start_the_change_of_password_process"
        tools:layout_editor_absoluteX="230dp"
        tools:layout_editor_absoluteY="293dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:textSize="20sp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="italic"
        android:textColor="@color/black"
        app:layout_constraintTop_toBottomOf="@id/id_btn_profile_changeEmail"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_til_profile_currentPass"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        android:layout_marginTop="32dp"
        tools:layout_editor_absoluteY="374dp"
        app:passwordToggleEnabled="true"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_tv_profile_password">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_tiet_profile_current"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/current_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_til_profile_newPass"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="452dp"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_profile_currentPass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_tiet_profile_new"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/id_til_profile_confirm"
        android:layout_width="409dp"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="558dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_profile_newPass">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/id_tiet_profile_confirm"
            android:inputType="textPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/confirm_new_password" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/id_btn_profile_changePassword"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:text="@string/change_password"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="369dp"
        android:layout_marginTop="32dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/id_til_profile_confirm"/>

    <Button
        android:id="@+id/id_btn_profile_home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/go_home"
        tools:layout_editor_absoluteX="141dp"
        tools:layout_editor_absoluteY="584dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="32dp"/>


</androidx.constraintlayout.widget.ConstraintLayout>