<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".AgentAppointmentActivity">

    <TextView
        android:id="@+id/id_tv_agentMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/fill_in_the_details_for_your_meeting_with_our_agent"
        tools:layout_editor_absoluteX="176dp"
        tools:layout_editor_absoluteY="107dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_margin="64dp"
        android:fontFamily="sans-serif-condensed"
        android:textStyle="bold"
        android:textColor="@color/light_green"
        android:textSize="20sp"/>

    <Button
        android:id="@+id/id_btn_setMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/set_meeting"
        tools:layout_editor_absoluteX="92dp"
        tools:layout_editor_absoluteY="392dp"
        app:layout_constraintStart_toEndOf="@id/id_btn_cancelMeeting"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"/>

    <Button
        android:id="@+id/id_btn_cancelMeeting"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/cancel"
        tools:layout_editor_absoluteX="115dp"
        tools:layout_editor_absoluteY="261dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/id_btn_setMeeting"
        app:layout_constraintBottom_toBottomOf="parent"
        android:layout_marginBottom="64dp"/>
</androidx.constraintlayout.widget.ConstraintLayout>